--- a/roles/audit/tasks/main.yml
+++ b/roles/audit/tasks/main.yml
@@ -1,5 +1,9 @@
----
-- import_tasks: ssh.yml
-- import_tasks: firewall.yml
-- import_tasks: users.yml
+- name: Audit SSH configuration
+  import_tasks: ssh.yml
+
+- name: Audit firewall configuration
+  import_tasks: firewall.yml
+
+- name: Audit user configuration
+  import_tasks: users.yml
 
