--- a/roles/users/defaults/main.yml
+++ b/roles/users/defaults/main.yml
@@ -1,5 +1,5 @@
 #SPDX-License-Identifier: MIT-0
 # defaults file for roles/users
 ---
-devops_user: devops
-devops_shell: /bin/bash
+users_devops_user: devops
+users_devops_shell: /bin/bash
